--- a/global.css
+++ b/global.css
@@ -13,3 +13,32 @@ body {
 ::selection {
 	background-color: #ff4500;
 }
+
+/* Scrollbar */
+::-webkit-scrollbar {
+	width: 13px;
+}
+
+::-webkit-scrollbar-track {
+	background: #1b1b1b;
+	border: 3px solid #222222;
+	border-radius: 9999px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #585858;
+	border-radius: 9999px;
+	border: 3px solid #222222;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #2e2e2e;
+}
+
+.red {
+	color: red;
+}
+
+textarea {
+	background-color: #000;
+}
